# OERsyncAI

./: .env.template  .gitignore  ILIAS_CONVERSION_DEBUG.md  ILIAS_INTEGRATION_FIXES.md  README.md  debug_conversion.py  demo_conversion.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  environment.example  pyproject.toml  run_tests.py  start_demo.py  start_gitpod.py  test_conversion_report.md  test_ilias_conversion.py  test_own_course.py  validate_mbz.py
docker_image/: docker-compose-client.yml  setup-and-restore.sh  setup-client.sh  teardown-mac.sh
docs/: convert.md  environment_setup.md  frontend_summary.md  gitpod_integration.md  ilias_integration.md  media_integration.md  phase2_and_3_summary.md  task7_fastapi_service_summary.md  testing_guide.md
frontend/: README.md  index.html  serve.py
frontend-vite/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
frontend-vite/src/: App.css  App.jsx  index.css
frontend-vite/src/components/: ActivityList.jsx  ActivityPreview.jsx  CourseSummary.jsx  CourseVisualizer.jsx  IliasAnalysisView.jsx  MetadataDisplay.jsx  StatusBar.jsx  UploadSection.jsx
frontend-vite/src/components/ui/: badge.jsx  button.jsx  card.jsx
frontend-vite/src/context/: CourseContext.jsx  useCourse.js
frontend-vite/src/hooks/: useApiData.js  useFileUpload.js
scripts/: prd.txt
services/extractor/: Dockerfile  __init__.py  main.py  requirements.txt
services/gateway/: __init__.py  requirements.txt
services/ilias-analyzer/: Dockerfile  __init__.py  main.py  requirements.txt
services/llm-orchestrator/: Dockerfile  __init__.py  requirements.txt
shared/: __init__.py
shared/models/: __init__.py  dublin_core.py
shared/utils/: __init__.py  ai_utils.py  file_utils.py  log_handler.py  mbz_extractor.py  media.py  metadata_mapper.py  xml_parser.py
shared/utils/ilias/: __init__.py  analyzer.py  compatibility_checker.py  container_parser.py  factory.py  itemgroup_resolver.py  moodle_converter.py  structure_mapper.py
shared/utils/ilias/parsers/: __init__.py  base.py  course.py  exercise.py  file.py  (+8 more)
tests/: __init__.py  conftest.py  test_analyzer_container_integration.py  test_compatibility_checker.py  test_components.py  test_container_parser.py  test_extractor.py  test_extractor_api.py  test_itemgroup_resolver.py  test_media_integration.py  test_metadata_mapper.py  test_moodle_converter_integration.py  test_real_mbz.py  test_simple.py  test_structure_mapper.py  test_xml_parser.py
