[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oersync-ai"
version = "0.1.0"
description = "Middleware für KI-gestützte Extraktion und Strukturierung von Moodle-Metadaten"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OERSync-AI Team", email = "contact@oersync-ai.org"}
]
keywords = ["moodle", "metadata", "llm", "education", "dublin-core"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: XML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "structlog>=23.1.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/oersync-ai/oersync-ai"
Documentation = "https://docs.oersync-ai.org"
Repository = "https://github.com/oersync-ai/oersync-ai.git"
"Bug Tracker" = "https://github.com/oersync-ai/oersync-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "shared*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["services", "shared"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=services --cov=shared --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]